@@ -6,10 +6,13 @@ import org.prog.dto.NameDto;
 import org.prog.dto.ResultsDto;
 import org.prog.util.DataHolder;
 
+import java.sql.PreparedStatement;
+
 public class RestSteps {
 
     @Given("I retrieve a random user from API as {string}")
     public void retrieveRandomUser(String alias) {
+
         RestAssured.baseURI = "https://randomuser.me/";
         ResultsDto dto = RestAssured.given()
                 .queryParam("inc", "gender,name,nat")
@@ -18,8 +21,6 @@ public class RestSteps {
                 .get()
                 .as(ResultsDto.class);
 
-        NameDto name = dto.getResults().get(0).getName();
-        DataHolder.getInstance().put(alias, name.getFirst() + " " + name.getLast());
-        System.out.println("Stored user : " + DataHolder.getInstance().get(alias));
+        DataHolder.getInstance().put(alias, dto.getResults().get(0));
     }
 }
